added a simple integration with a elastic search instance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+server.port=8091
+
+
+
+
+# Local Elasticsearch config
+spring.data.elasticsearch.repositories.enabled=true
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-name=elasticsearch
+elasticsearch.index.name=blog1
+elasticsearch.user.type=article1
