--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    implementation 'org.elasticsearch:elasticsearch'
     implementation 'org.springframework.kafka:spring-kafka'
     //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.0.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.0.RELEASE'
