work on messaging component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-name=elasticsearch
 elasticsearch.index.name=blog1
 elasticsearch.user.type=article1
+
+
+# Pretty-print JSON responses
+spring.jackson.serialization.indent_output=true
+
+
+#kafka config related
+kafka.broker.address=localhost:9092
