--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ repositories {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+    
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.elasticsearch:elasticsearch'
     implementation 'org.springframework.kafka:spring-kafka'
