--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8091
 spring.data.elasticsearch.repositories.enabled=true
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-name=elasticsearch
-elasticsearch.index.name=blog1
+elasticsearch.index.name=index1
 elasticsearch.user.type=article1
 
 
